# clipz

./: .gitignore  build.zig  flake.nix
cliphizt/: build.zig.zon  package.nix
cliphizt/contrib/: cliphizt.service
cliphizt/src/: cleanup.zig  config.zig  db.zig  decode.zig  main.zig  preview.zig  store.zig
cliplenz/: Cargo.toml  package.nix
cliplenz/src/: app.rs  cli.rs  external.rs  fuzzy.rs  main.rs  model.rs  theme.rs
nix/: cliplenz-hm-module.nix  hm-module.nix  package.nix
src/: compact.zig  decode.zig  delete.zig  list.zig  main.zig  mode.zig  store.zig  ttl.zig
