[package]
name = "cliplenz"
version = "0.1.0"
edition = "2021"
description = "Fast native clipboard viewer for cliphizt with fuzzy search and image preview"
license = "MIT"
repository = "https://github.com/luisnquin/clipz"

[[bin]]
name = "cliplenz"
path = "src/main.rs"

[dependencies]
iced = { version = "0.14", features = ["image", "tiny-skia"] }
iced_layershell = "0.18"
nucleo-matcher = "0.3"
image = "0.25"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
